[feat] Update create and update endpoints for swagger implementation
